--- a/ML_EASYMODEL.ipynb
+++ b/ML_EASYMODEL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +63,19 @@
       "  -1.62294901e-01  1.02044631e-01]]\n",
       "原始特征数量: 4\n",
       "特征工程后的特征数量: 14\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\py3.12.3\\Lib\\site-packages\\dask\\dataframe\\__init__.py:42: FutureWarning: \n",
+      "Dask dataframe query planning is disabled because dask-expr is not installed.\n",
+      "\n",
+      "You can install it with `pip install dask[dataframe]` or `conda install dask`.\n",
+      "This will raise in a future version.\n",
+      "\n",
+      "  warnings.warn(msg, FutureWarning)\n"
      ]
     }
    ],
@@ -92,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,12 +133,13 @@
     "\t\tprint('mse:{0}'.format(mse))\n",
     "\n",
     "\t\"\"\"模型效果评估\"\"\"\n",
-    "\tmetrics_sklearn(y_test, y_pred)"
+    "\tmetrics_sklearn(y_test, y_pred)\n",
+    "\treturn y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +148,8 @@
      "text": [
       "预测值与真实值差距均在20%内部\n",
       "r2_score:0.9999676563807013\n",
-      "mse:1.0100737886650835e-07\n"
+      "mse:1.0100737886650835e-07\n",
+      "[1.1928681 1.1979465 1.3207273 ... 1.2809255 1.1581937 1.198114 ]\n"
      ]
     }
    ],
@@ -142,7 +157,8 @@
     "# 训练xgboost\n",
     "model_xbg = XGBRegressor()\n",
     "model_xbg.fit(X_train,y_train,verbose=True)\n",
-    "eval_model(model_xbg)"
+    "c = eval_model(model_xbg)\n",
+    "print(c)"
    ]
   },
   {
