--- a/USE_THETA.ipynb
+++ b/USE_THETA.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "$$p=\\frac{\\theta RT}{V-b}-\\frac{a}{V(V+b)}$$\n",
     "其中\n",
-    "$$a(T)=0.42748\\frac{\\theta^2R^2T_{c}^2}{p_c}\\alpha(T),b(T)=0.08664\\frac{\\theta RT_c}{p_c}(\\beta(T))=1$$"
+    "$$a(T)=0.42748\\frac{\\theta^2R^2T_{c}^2}{p_c}\\alpha(T),b(T)=0.08664\\frac{\\theta RT_c}{p_c}(\\beta(T))=1$$\n",
+    "$$\\alpha(T)=[1+(0.48+1.574\\omega-0.176\\omega^2)(1-(\\frac{T}{T_c})^{0.5})]^2$$"
    ]
   },
   {
@@ -21680,7 +21681,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.12.3",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
