--- a/ML_EASYMODEL.ipynb
+++ b/ML_EASYMODEL.ipynb
@@ -809,7 +809,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.12.3",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
